Use our own progress for track if phonon reported position seems wrong

At least phonon-vlc seems to commonly claim position is 0 when stopping
playback / when backend prepares the next track to be played gapless. This
causes the track progress on stop to be 0, which further causes the track
scrobbling and playcount updates get skipped (at least sometimes), it seems.

BUG: 406701

BUG: 337849